@@ -1,0 +1,15 @@
+256
+ 10 6290000 805318960 0 0 0 0 0 0 0
+ 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625 0.00390625
+
+ nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan
+
+ nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan nan
+
+ 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+
+ 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+
+ 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
+
+ 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
