@@ -1,0 +1,5 @@
+  3
+  .2 .3 .5
+  10  30  50
+  4  5  8
+  200
