@@ -1,0 +1,5 @@
+20
+0.10
+5
+40
+2011
